load("//bazel:skia_rules.bzl", "exports_files_legacy", "skia_cc_deps", "skia_filegroup", "split_srcs_and_hdrs")

licenses(["notice"])

exports_files_legacy()

CQ_FILES = [
    "coquelicot-shared-empty.cpp",
    "coquelicot-shared-empty.h",
]

split_srcs_and_hdrs(
    name = "coquelicot",
    files = CQ_FILES,
)

skia_filegroup(
    name = "srcs",
    srcs = [":coquelicot_srcs"],
    visibility = [
        "//src/gpu:__pkg__",
        "//src/gpu/ganesh/coquelicot:__pkg__",
    ],
)

skia_filegroup(
    name = "private_hdrs",
    srcs = [":coquelicot_hdrs"],
    visibility = [
        "//src/gpu:__pkg__",
        "//src/gpu/ganesh/coquelicot:__pkg__",
    ],
)

skia_cc_deps(
    name = "deps",
    visibility = ["//src/gpu:__pkg__"],
    deps = []
)
