load("//bazel:skia_rules.bzl", "exports_files_legacy", "skia_filegroup")

licenses(["notice"])

exports_files_legacy()

skia_filegroup(
    name = "srcs",
    srcs = [
        "coquelicot-empty.cpp",
    ],
    visibility = ["//src/gpu/ganesh:__pkg__"],
)

skia_filegroup(
    name = "private_hdrs",
    srcs = [
        "coquelicot-empty.h",
    ],
    visibility = ["//src/gpu/ganesh:__pkg__"],
)
